--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>water</title>
+<title>Paaniwaani</title>
 <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="header-inner">
         <div class="logo">
-            <img src="./assets/images/logo.webp" alt="">
+            <img src="./assets/images/Logo - English.png" alt="">
         </div>
         <div class="navigation">
                 <ul>
