--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     <div class="footer-inner">
         <div class="footer-top">
         <div class="logo-content">
-            <img src="./assets/images/logo.webp" alt="">
+            <img src="./assets/images/Logo - English.png" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta eligendi facere ad suscipit quas atque voluptate nemo cum, magnam hic accusantium est iure saepe vero, illum adipisci quod odit quibusdam!</p>
         <div class="footer-social">
             <ul>
