--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="mobile-header" style="display:none;">
 <div class="header-inner">
     <div class="logo">
-        <a href="#"><img src="./assets/images/logo.webp" alt=""></a>
+        <a href="#"><img src="./assets/images/Logo - English.png" alt=""></a>
     </div>
     <div class="header-toggle">
         <span></span>
