--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
     </div>
     <div class="logo">
-        <a href="#"><img src="./assets/images/logo.webp" alt=""></a>
+        <a href="#"><img src="/assets/images/Logo - English.png" alt=""></a>
     </div>
     <div class="navigation right">
         <ul>
@@ -37,7 +37,7 @@
 <div class="mobile-header" style="display:none;">
 <div class="header-inner">
     <div class="logo">
-        <a href="#"><img src="./assets/images/logo.webp" alt=""></a>
+        <a href="#"><img src="./assets/images/Logo - English.png" alt=""></a>
     </div>
     <div class="header-toggle">
         <span></span>
@@ -504,7 +504,7 @@
 <div class="footer-inner">
     <div class="footer-top">
     <div class="logo-content">
-        <img src="./assets/images/logo.webp" alt="">
+        <img src="./assets/images/Logo - English.png" alt="">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta eligendi facere ad suscipit quas atque voluptate nemo cum, magnam hic accusantium est iure saepe vero, illum adipisci quod odit quibusdam!</p>
     <div class="footer-social">
         <ul>
