--- a/index.html
+++ b/index.html
@@ -62,36 +62,36 @@
 <!-- banner -->
 <section class="banner">
     <div class="banner-inner">
-        <div class="banner-slider" style="background-image: url(./assets/images/carousel-1.jpg);">
+        <div class="banner-slider" style="background-image: url(./assets/images/hero/banner-1.png);">
             <div class="container">
         <div class="banner-content">
-            <span class="highlight-text">Importance</span>
-            <h1>Always Want Safe Water For Healthy Life</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non cum iusto, hic quibusdam possimus dolore vero exercitationem nam. Rem dolores repellendus consequuntur alias beatae et illo iure ad a perferendis.</p>
+            <span class="highlight-text">Pure Refreshing Reliable.</span>
+            <h1>Water that speaks of trust and care.</h1>
+            <p>At Paaniwaani, we believe purity should be effortless. That's why every bottle is filtered, mineral-balanced, and packed to deliver hydration you can count on—wherever you go.</p>
                 <div class="btn-wrap">
-                <a class="btn" href="">Enquiry</a>
+                <a class="btn" href="">Explore More</a>
                 </div>
         </div>
     </div>
         </div>
-        <div class="banner-slider" style="background-image: url(./assets/images/carousel-2.jpg);">
+        <div class="banner-slider" style="background-image: url(./assets/images/hero/banner-2.png);">
         <div class="container">
         <div class="banner-content">
-            <span class="highlight-text">Importance</span>
-            <h1>Always Want Safe Water For Healthy Life</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non cum iusto, hic quibusdam possimus dolore vero exercitationem nam. Rem dolores repellendus consequuntur alias beatae et illo iure ad a perferendis.</p>
+            <span class="highlight-text">Hydration That Heals.</span>
+            <h1>Crafted for clarity, tested for purity.</h1>
+            <p>Our triple-layer filtration and mineral enhancement process ensures every sip revitalizes you. It's more than just water—it's a commitment to your well-being, one bottle at a time.</p>
                 <div class="btn-wrap">
-                <a class="btn" href="">Enquiry</a>
+                <a class="btn" href="">See Our Process</a>
                 </div>
         </div>
     </div>
         </div>
-        <div class="banner-slider" style="background-image: url(./assets/images/carousel-1.jpg);">
+        <div class="banner-slider" style="background-image: url(./assets/images/hero/banner-3.png);">
             <div class="container">
             <div class="banner-content">
-                <span class="highlight-text">Importance</span>
-                <h1>Always Want Safe Water For Healthy Life</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non cum iusto, hic quibusdam possimus dolore vero exercitationem nam. Rem dolores repellendus consequuntur alias beatae et illo iure ad a perferendis.</p>
+                <span class="highlight-text">Simplicity in Every Sip.</span>
+                <h1>Clean design. Crisp taste.</h1>
+                <p>Paaniwaani blends form and function with a modern look and unmatched purity. Whether at home or on the move, our water complements your lifestyle with quiet confidence.</p>
                     <div class="btn-wrap">
                     <a class="btn" href="">Enquiry</a>
                     </div>
@@ -107,46 +107,46 @@
 <div class="our-feature-inner">
     <div class="section-header">
         <span class="subtitle h4">our feature</span>
-        <h2>A Trusted Name In Bottled Water Industry</h2>
+        <h2>Why Choose Paaniwaani</h2>
     </div>
     <div class="feature-cols">
         <div class="single-col">
             <div class="feature-icon">
-                <img src="/assets/images/icons/quality.png" alt="">
+                <img src="/assets/images/features/purity.png" alt="">
             </div>
-            <div class="feature-title"><h3 class="h4">quality check</h3></div>
+            <div class="feature-title"><h3 class="h4">Mineral-Rich Purity</h3></div>
             <div class="feature-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aliquid nesciunt reprehenderit maiores eum ducimus enim, quia veniam culpa.</p>
+                <p>Every bottle is filled with water that's carefully balanced with essential minerals, delivering a taste that's clean, crisp, and refreshing.</p>
                 <a class="read-more" href="#">read more</a>
             </div>
         </div>
         <div class="single-col">
             <div class="feature-icon">
-                <img src="/assets/images/icons/quality.png" alt="">
+                <img src="/assets/images/features/filtration.png" alt="">
             </div>
-            <div class="feature-title"><h3 class="h4">11 steps filtration</h3></div>
+            <div class="feature-title"><h3 class="h4">11 stage filtration</h3></div>
             <div class="feature-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aliquid nesciunt reprehenderit maiores eum ducimus enim, quia veniam culpa.</p>
+                <p>Our advanced purification system ensures that every drop meets the highest standards of safety and clarity.</p>
                 <a class="read-more" href="#">read more</a>
             </div>
         </div>
         <div class="single-col">
             <div class="feature-icon">
-                <img src="/assets/images/icons/quality.png" alt="">
+                <img src="/assets/images/features/composition.png" alt="">
             </div>
-            <div class="feature-title"><h3 class="h4">composition</h3></div>
+            <div class="feature-title"><h3 class="h4">Composition</h3></div>
             <div class="feature-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aliquid nesciunt reprehenderit maiores eum ducimus enim, quia veniam culpa.</p>
+                <p>Paaniwaani is formulated with an ideal mix of natural minerals like calcium, magnesium, and potassium—supporting hydration and wellness in every sip.</p>
                 <a class="read-more" href="#">read more</a>
             </div>
         </div>
         <div class="single-col">
             <div class="feature-icon">
-                <img src="/assets/images/icons/quality.png" alt="">
+                <img src="/assets/images/features/biodegradable.png" alt="">
             </div>
-            <div class="feature-title"><h3 class="h4">Lab control</h3></div>
+            <div class="feature-title"><h3 class="h4">Thoughtful Packaging</h3></div>
             <div class="feature-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aliquid nesciunt reprehenderit maiores eum ducimus enim, quia veniam culpa.</p>
+                <p>We use high-quality, food-grade packaging that keeps the water fresh and protects its purity—wherever you go.</p>
                 <a class="read-more" href="#">read more</a>
             </div>
         </div>
