--- a/index.html
+++ b/index.html
@@ -161,24 +161,24 @@
     <div class="about-inner">
         <div class="left-rigth-section">
             <div class="left-image">
-                <img src="/assets/images/about.jpg" alt="">
-                <span class="about-tag">1 year experience</span>
+                <img src="/assets/images/about/about-post.jpg" alt="">
+                <!-- <span class="about-tag">1 year experience</span> -->
             </div>
             <div class="right-content">
                 <div class="section-header">
                     <span class="subtitle h4">about us</span>
-                    <h2>We Deliver The Quality Water.</h2>
+                    <h2>Pure Water, Pure Intent</h2>
                 </div>
                 <div class="about-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus nostrum quisquam laborum eum architecto inventore voluptate suscipit ullam consectetur facere pariatur, voluptatibus temporibus quaerat expedita, quae ducimus voluptates molestiae officia!</p>
+                    <p>Paaniwaani is more than just bottled water—it's a commitment to clean, refreshing hydration you can trust. Carefully sourced and precisely filtered, every drop reflects our promise of purity, consistency, and care. Whether you're living life on-the-go or enjoying a quiet moment, Paaniwaani is your daily companion in wellness.</p>
                     <div class="about-box-wrapper">
                         <div class="about-box">
                             <div class="icon">
 
                             </div>
                             <div class="description">
-                                <h3>standard product</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, magnam.</p>
+                                <h3 class="h4">Crafted for Everyday Refreshment</h3>
+                                <p>Experience hydration redefined. With Paaniwaani, purity isn't a feature—it's our foundation.</p>
                             </div>
                         </div>
                     </div>
