--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 <!-- banner -->
 <section class="banner">
     <div class="banner-inner">
-        <div class="banner-slider" style="background-image: url(./assets/images/hero/banner-1.png);">
+        <div class="banner-slider">
+            <video autoplay muted loop playsinline src="./assets/images/videos/banner-video.mp4" type="video/mp4"></video>
             <div class="container">
         <div class="banner-content">
             <span class="highlight-text">Pure Refreshing Reliable.</span>
@@ -86,7 +87,7 @@
         </div>
     </div>
         </div>
-        <div class="banner-slider" style="background-image: url(./assets/images/hero/banner-3.png);">
+        <div class="banner-slider" style="background-image: url(./assets/images/hero/banner-1.png);">
             <div class="container">
             <div class="banner-content">
                 <span class="highlight-text">Simplicity in Every Sip.</span>
@@ -199,29 +200,29 @@
         <div class="counter-wrapper">
             <div class="single-col">
                 <div class="counter-icon">
-                    <img src="/assets/images/icons/thumbsup.png" alt="">
+                    <img src="/assets/images/icons/happy-client.png" alt="">
                 </div>
                 <div class="counter-title">
                     <h3>Happy Clients</h3>
                 </div>
                 <div class="counter-number">
-                    <p class="counter" data-target="100">0 <span>+</span></p>
+                    <p class="counter h4" data-target="100">0 <span>+</span></p>
                 </div>
             </div>
             <div class="single-col">
                 <div class="counter-icon">
-                    <img src="/assets/images/icons/thumbsup.png" alt="">
+                    <img src="/assets/images/icons/delivery.png" alt="">
                 </div>
                 <div class="counter-title">
-                    <h3>Transport</h3>
+                    <h3>Transportation</h3>
                 </div>
                 <div class="counter-number">
-                    <p class="counter" data-target="10">0 <span>+</span></p>
+                    <p class="counter h4" data-target="10">0 <span>+</span></p>
                 </div>
             </div>
-            <div class="single-col">
+            <!-- <div class="single-col">
                 <div class="counter-icon">
-                    <img src="/assets/images/icons/thumbsup.png" alt="">
+                    <img src="/assets/images/icons/delivery.png" alt="">
                 </div>
                 <div class="counter-title">
                     <h3>Employees</h3>
@@ -229,18 +230,18 @@
                 <div class="counter-number">
                     <p class="counter" data-target="10">0 <span>+</span></p>
                 </div>
-            </div>
+            </div> -->
             <div class="single-col">
                 <div class="counter-icon">
-                    <img src="/assets/images/icons/thumbsup.png" alt="">
+                    <img src="/assets/images/icons/expert.png" alt="">
                 </div>
                 <div class="counter-title">
-                    <h3>year's experience</h3>
+                    <h3>Experience</h3>
                 </div>
                 <div class="counter-number">
-                    <p class="counter" data-target="1">0 <span>+</span></p>
+                    <!-- <p class="counter" data-target="1">0 <span>+</span></p> -->
                     <div class="timer">
-                        <span id="timer">00:00:00</span>
+                        <span id="timer" class="h4">00:00:00</span>
                     </div>
                 </div>
             </div>
