--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         </div>
     </div>
         </div>
-        <div class="banner-slider" style="background-image: url(./assets/images/hero/banner-2.png);">
+        <div class="banner-slider">
+            <video autoplay muted loop playsinline src="./assets/images/videos/banner-2.mp4" type="video/mp4"></video>
         <div class="container">
         <div class="banner-content">
             <span class="highlight-text">Hydration That Heals.</span>
@@ -87,7 +88,8 @@
         </div>
     </div>
         </div>
-        <div class="banner-slider" style="background-image: url(./assets/images/hero/banner-1.png);">
+        <div class="banner-slider">
+            <video autoplay muted loop playsinline src="./assets/images/videos/banner-3.mp4" type="video/mp4"></video>
             <div class="container">
             <div class="banner-content">
                 <span class="highlight-text">Simplicity in Every Sip.</span>
@@ -256,35 +258,26 @@
     <div class="service-inner">
         <div class="section-header">
             <span class="subtitle h4">our service</span>
-            <h2>Protect Your Family with Best Water</h2>
+            <h2>Delivering Purity, Every Step</h2>
         </div>
         <div class="service-wrapper">
             <div class="single-col">
                 <div class="service-box">
                     <div class="service-desc">
-                        <h3>Residential water</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, quo!</p>
+                        <h3 class="h4">Bottled Mineral Water Supply</h3>
+                        <p>High-quality mineral water bottled at source and sealed for purity. Available in multiple sizes to suit everyday needs — whether at home, work, or on the move.</p>
                     </div>
                     <div class="service-icon">
-                        <img src="/assets/images/icons/quality.png" alt="">
+                        <img src="/assets/images/icons/supply-chain-management.png" alt="">
                     </div>
                 </div>
                 <div class="service-box">
                     <div class="service-desc">
-                        <h3>commercial water</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, quo!</p>
+                        <h3 class="h4">Bulk & Institutional Supply</h3>
+                        <p>We cater to large-scale water requirements for hotels, restaurants, offices, schools, and healthcare institutions. Reliable delivery and consistent quality, every time.</p>
                     </div>
                     <div class="service-icon">
-                        <img src="/assets/images/icons/quality.png" alt="">
-                    </div>
-                </div>
-                <div class="service-box">
-                    <div class="service-desc">
-                        <h3>filtration plants</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, quo!</p>
-                    </div>
-                    <div class="service-icon">
-                        <img src="/assets/images/icons/quality.png" alt="">
+                        <img src="/assets/images/icons/supply-chain.png" alt="">
                     </div>
                 </div>
             </div>
@@ -294,29 +287,20 @@
             <div class="single-col">
                 <div class="service-box">
                     <div class="service-icon">
-                        <img src="/assets/images/icons/quality.png" alt="">
+                        <img src="/assets/images/icons/business-solution.png" alt="">
                     </div>
                     <div class="service-desc">
-                        <h3>Residential water</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, quo!</p>
+                        <h3 class="h4">Event &amp; Corporate Solutions</h3>
+                        <p>From intimate gatherings to large corporate events, we provide bottled water solutions tailored to your guest list — helping you create a seamless, refreshing experience.</p>
                     </div>
                 </div>
                 <div class="service-box">
                     <div class="service-icon">
-                        <img src="/assets/images/icons/quality.png" alt="">
+                        <img src="/assets/images/icons/contract.png" alt="">
                     </div>
                     <div class="service-desc">
-                        <h3>commercial water</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, quo!</p>
-                    </div>
-                </div>
-                <div class="service-box">
-                    <div class="service-icon">
-                        <img src="/assets/images/icons/quality.png" alt="">
-                    </div>
-                    <div class="service-desc">
-                        <h3>filtration plants</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, quo!</p>
+                        <h3 class="h4">HoReCa Partnerships</h3>
+                        <p>Dedicated water supply solutions for the Hospitality, Restaurant, and Catering (HoReCa) industry. Partner with Paaniwaani for a dependable source of premium drinking water your guests can trust.</p>
                     </div>
                 </div>
             </div>
@@ -395,6 +379,10 @@
 <section class="testimonial">
     <div class="container">
         <div class="testimonial-inner">
+            <div class="section-header">
+                <span class="subtitle h4">Your trust, our pride</span>
+                <h2>Real Words. Real Experiences</h2>
+            </div>
 <!-- Elfsight Google Reviews | Untitled Google Reviews -->
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
 <div class="elfsight-app-8f57e7ec-2092-4bd3-8f1b-98aecdd895a5" data-elfsight-app-lazy></div>
@@ -407,6 +395,7 @@
     <div class="container">
         <div class="contact-inner">
             <div class="section-header">
+                <span class="subtitle h4">Reach out. We're here to help</span>
                 <h2>Connect with us</h2>
             </div>
             <div class="form-wrapper">
@@ -447,21 +436,21 @@
                 <form id="contactForm">
                     <fieldset>
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
+                    <input class="input" type="text" id="name" name="name" required>
                 </fieldset>
                 <fieldset>
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <input class="input" type="email" id="email" name="email" required>
                 </fieldset>
                 <fieldset>
                     <label for="tel">Phone:</label>
-                    <input type="tel" id="phone" name="phone" required>
+                    <input class="input" type="tel" id="phone" name="phone" required>
                 </fieldset>
                 <fieldset>
                     <label for="message">Message:</label>
-                    <textarea id="message" name="message" required></textarea>
+                    <textarea class="input" id="message" name="message" required></textarea>
                 </fieldset>
-                    <button type="submit">Submit</button>
+                    <button class="btn" type="submit">Submit</button>
                   </form>
                   
                   <p id="responseMessage" style="display:none; color: green;">Thank you! Your message has been sent.</p>
@@ -539,7 +528,7 @@
     </div>
 </div>
 <div class="footer-bottom">
-    <p>&copy; Copyrigth blablabla, All right reserved</p>
+    <p>&copy; Copyrigth Paaniwaani, All right reserved</p>
 </div>
 </div>
 </div>
